test/expected/explain_ov_o_exclam_k_b.out
struct S; explain bool operator!(S) override
            ^
13: error: member operator ! must have exactly 0 parameters
